# Djinecraft

./: README.md  pyproject.toml
Djinecraft/: cli.py
Djinecraft/core/: start_app.py  start_project.py
Djinecraft/templates/new_project/: manage.py
